# CSC-572-Transvoxel

./: .gitignore  CMakeLists.txt  Readme.md
LOGLEngine/Headers/: Isovalues.h  MarchingCubes.h  MatrixStack.h  Scene.h  Shader.hpp  Transvoxel.h  Voxel.h  loglengine.hpp
LOGLEngine/Headers/Noise/: Noise.h  NoiseProperties.h
LOGLEngine/Shaders/: basic.frag  basic.vert  volume.frag  volume.vert
LOGLEngine/Sources/: MatrixStack.cpp  main.cpp  main_marching_cubes.cpp
Samples/: readme.md
Website/tcdahl/: index.html
